--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://drive.google.com/uc?export=download&id=10l2repbd2QcyRP49LrXCupGWgtJOGXPz&authuser=j%40mienelson.com&usp=drive_fs</string>
+					<string>https://www.dropbox.com/s/6qm21proqok79ti/GFX%20Viewer.ipa?dl=0</string>
 				</dict>
 				<dict>
 					<key>kind</key>
