--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://www.dropbox.com/s/6qm21proqok79ti/GFX%20Viewer.ipa?dl=1</string>
+					<string>https://www.dropbox.com/s/jdoeqcpqhtqp19u/HereOutWest2.ipa?dl=1</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -29,7 +29,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.mienelson.GFXViewer2</string>
+				<string>com.mienelson.HereOutWest2</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
@@ -37,7 +37,7 @@
 				<key>platform-identifier</key>
 				<string>com.apple.platform.iphoneos</string>
 				<key>title</key>
-				<string>GFX Viewer</string>
+				<string>HereOutWest2</string>
 			</dict>
 		</dict>
 	</array>
