--- a/manifests/gfxviewer/manifest.plist
+++ b/manifests/gfxviewer/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://drive.google.com/uc?export=download&id=10l2repbd2QcyRP49LrXCupGWgtJOGXPz</string>
+					<string>https://drive.google.com/uc?export=download&id=1O5Y61u1-FyoqnIch9lYpXvK_OkaugPzX</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://display</string>
+					<string>https://images.squarespace-cdn.com/content/5fabcb7453355a03f79df5d8/1605103099889-39W4GA4QMTAT8OULVJRX/118595986_101194355063398_3074101791105487289_n.jpg?content-type=image%2Fjpeg</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://full</string>
+					<string>https://images.squarespace-cdn.com/content/5fabcb7453355a03f79df5d8/1605103099889-39W4GA4QMTAT8OULVJRX/118595986_101194355063398_3074101791105487289_n.jpg?content-type=image%2Fjpeg</string>
 				</dict>
 			</array>
 			<key>metadata</key>
