--- a/manifests/gfxviewer/manifest.plist
+++ b/manifests/gfxviewer/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://drive.google.com/uc?export=download&id=1O5Y61u1-FyoqnIch9lYpXvK_OkaugPzX</string>
+					<string>https://www.dropbox.com/s/glmlakciletrgs4/GFX%20Viewer.ipa?dl=1</string>
 				</dict>
 				<dict>
 					<key>kind</key>
