--- a/m/HAA/1511/manifest.plist
+++ b/m/HAA/1511/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://www.dropbox.com/s/angbzit0b4n68aa/1511%20GFX.ipa?dl=1</string>
+					<string>https://www.dropbox.com/s/fqd28tgnq6pt587/1511%20GFX.ipa?dl=1</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://images.squarespace-cdn.com/content/5fabcb7453355a03f79df5d8/1605103099889-39W4GA4QMTAT8OULVJRX/118595986_101194355063398_3074101791105487289_n.jpg?content-type=image%2Fjpeg</string>
+					<string>https://tinyurl.com/y4um6w2o</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://images.squarespace-cdn.com/content/5fabcb7453355a03f79df5d8/1605103099889-39W4GA4QMTAT8OULVJRX/118595986_101194355063398_3074101791105487289_n.jpg?content-type=image%2Fjpeg</string>
+					<string>https://tinyurl.com/y4um6w2o</string>
 				</dict>
 			</array>
 			<key>metadata</key>
