--- a/m/TEST/manifest.plist
+++ b/m/TEST/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://www.dropbox.com/s/angbzit0b4n68aa/1511%20GFX.ipa?dl=1</string>
+					<string>https://drive.google.com/uc?export=download&amp;id=1pDUzlmtXs0-_IdgJhHFl7fTwA0O0Kx3S</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -29,7 +29,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.mienelson.-511-GFX</string>
+				<string>com.mienelson.app</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
@@ -37,7 +37,7 @@
 				<key>platform-identifier</key>
 				<string>com.apple.platform.iphoneos</string>
 				<key>title</key>
-				<string>1511 GFX</string>
+				<string>gfxViewer</string>
 			</dict>
 		</dict>
 	</array>
