--- a/m/TEST/manifest.plist
+++ b/m/TEST/manifest.plist
@@ -29,7 +29,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.mienelson.app</string>
+				<string>com.mienelson.DinoGame</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
@@ -37,7 +37,7 @@
 				<key>platform-identifier</key>
 				<string>com.apple.platform.iphoneos</string>
 				<key>title</key>
-				<string>gfxViewer</string>
+				<string>HOW GFX DINO GAME</string>
 			</dict>
 		</dict>
 	</array>
