--- a/m/TEST/manifest.plist
+++ b/m/TEST/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://docs.google.com/uc?export=download&id=19I1w-UwBry1dbiJNL1mj-5J2d_yIbkw-</string>
+					<string>https://drive.google.com/uc?export=download&id=19I1w-UwBry1dbiJNL1mj-5J2d_yIbkw-</string>
 				</dict>
 				<dict>
 					<key>kind</key>
