--- a/m/TEST/manifest.plist
+++ b/m/TEST/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://drive.google.com/uc?export=download&id=1NYOejnR1T4Uu1FbJLQCIJJu99RaP1SWz</string>
+					<string>https://drive.google.com/uc?export=download&amp;id=1NYOejnR1T4Uu1FbJLQCIJJu99RaP1SWz</string>
 				</dict>
 				<dict>
 					<key>kind</key>
