--- a/m/TEST/manifest.plist
+++ b/m/TEST/manifest.plist
@@ -8,13 +8,14 @@
 			<key>assets</key>
 			<array>
 				<dict>
-					<key>kind</key>
-					<string>software-package</string>
-					<key>url</key>
-					<string>https://drive.google.com/uc?export=download&amp;id=1NYOejnR1T4Uu1FbJLQCIJJu99RaP1SWz</string>
-				</dict>
-				<dict>
-					<key>kind</key>
+ 					<key>kind</key>
+ 					<string>software-package</string>
+ 					<key>url</key>
+ 					<string>https://drive.google.com/uc?export=download&amp;id=1pDUzlmtXs0-_IdgJhHFl7fTwA0O0Kx3S</string>
+ 					<string>https://drive.google.com/uc?export=download&amp;id=1ALQbzmjHOgSwXYruq-4EoXjMKdxAypxc</string>
+ 				</dict>
+ 				<dict>
+ 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
 					<string>https://images.squarespace-cdn.com/content/5fabcb7453355a03f79df5d8/1605103099889-39W4GA4QMTAT8OULVJRX/118595986_101194355063398_3074101791105487289_n.jpg?content-type=image%2Fjpeg</string>
@@ -29,7 +30,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.mienelson.DinoGame</string>
+				<string>com.mienelson.app</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
@@ -37,7 +38,7 @@
 				<key>platform-identifier</key>
 				<string>com.apple.platform.iphoneos</string>
 				<key>title</key>
-				<string>HOW GFX DINO GAME</string>
+				<string>gfxViewer</string>
 			</dict>
 		</dict>
 	</array>
