--- a/m/TEST/manifest.plist
+++ b/m/TEST/manifest.plist
@@ -11,33 +11,33 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://drive.google.com/uc?export=download&id=1ALQbzmjHOgSwXYruq-4EoXjMKdxAypxc</string>
+					<string>https://www.dropbox.com/s/bbx7k2fu0jnqce4/HereOutWest2.ipa?dl=1</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://images.squarespace-cdn.com/content/5fabcb7453355a03f79df5d8/1605103099889-39W4GA4QMTAT8OULVJRX/118595986_101194355063398_3074101791105487289_n.jpg?content-type=image%2Fjpeg</string>
+					<string>https://tinyurl.com/y4um6w2o</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://images.squarespace-cdn.com/content/5fabcb7453355a03f79df5d8/1605103099889-39W4GA4QMTAT8OULVJRX/118595986_101194355063398_3074101791105487289_n.jpg?content-type=image%2Fjpeg</string>
+					<string>https://tinyurl.com/y4um6w2o</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.mienelson.app</string>
+				<string>com.mienelson.HereOutWest2</string>
 				<key>bundle-version</key>
-				<string>1.0</string>
+				<string>3</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>platform-identifier</key>
 				<string>com.apple.platform.iphoneos</string>
 				<key>title</key>
-				<string>gfxViewer</string>
+				<string>HereOutWest2</string>
 			</dict>
 		</dict>
 	</array>
